--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 					<h1>Git 101</h1>
 					<h3 class="colorful">A Gentle Introduction to Version Control, Git &amp; GitHub</h3>
 					<p>
-						<small><a href="https://github.com/kostasx">Kostas Minaidis</a></small>
-						<br/><small class="font-half">Instructor at Social Hackers Academy</small>
+						<small><a href="https://github.com/kostasx">Kosmas Pouianou, Kostas Minaidis</a></small>
+						<br/><small class="font-half">Instructors at Social Hackers Academy</small>
 					</p>
 				</section>
 
