Fixing GitHub name

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 					<h1>Git 101</h1>
 					<h3 class="gitcolor">A Gentle Introduction to Version Control, Git &amp; GitHub</h3>
 					<p>
-						<small><a style="color:#0388a6;" href="https://github.com/kostasx">Kosmas Pouianou, Kostas Minaidis</a></small>
+						<small><a style="color:#0388a6;" href="https://github.com/kpouianou">Kosmas Pouianou, Kostas Minaidis</a></small>
 						<br/><small class="font-half">Instructors at Social Hackers Academy</small>
 					</p>
 				</section>
