--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
 					<section>
 						<small><span class="colorful">Version Control Systems</span> allow the user to store<br/>a short descriptive message along with every single change.</small>
 						<img style="width:85%;" src="img/HistoryTracking.jpg" alt="">
-						<small style="font-size:0.5em;">Git can tell us who did what and when:<br/><span style="">"On <span class="colorful">April 23</span> the user <span class="colorful">Kostas</span> removed <span class="colorful">lines 30-36</span> from the file <span class="colorful">style.css</span>"</span></small>
+						<small style="font-size:0.5em;">A VCS can tell us who did what and when:<br/><span style="">"On <span class="colorful">April 23</span> the user <span class="colorful">Kostas</span> removed <span class="colorful">lines 30-36</span> from the file <span class="colorful">style.css</span>"</span></small>
 					</section>
 
 				</section>
