--- a/index.html
+++ b/index.html
@@ -383,11 +383,11 @@
 
 					<section>
 						<h3 class="gitcolor">What is Git?</h3>
-						<p class="fragment font-medium">Git is a very popular VCS.</p>
-						<p class="fragment font-medium">It tracks file changes and keeps a history of them <span class="colorful">(Commits)</span></p>
-						<p class="fragment font-medium">It allows for multiple users to work<br/>on a Project at the same time.</p>
-						<p class="fragment font-medium">Is supports <span class="colorful">Feature Branches</span></p>
-						<p class="fragment font-medium">Development with Git === <span class="colorful">Relax!</span></p>
+						<p class="fragment font-medium">Git is a very <span class="colorful">popular</span> VCS.</p>
+						<p class="fragment font-medium">It is a tool that we install on our computers and tracks<br/>file changes and keeps a history of them <span class="colorful">(Commits)</span></p>
+						<p class="fragment font-medium">It allows <span class="colorful">multiple users</span> to work<br/>on a Project at the same time.</p>
+						<p class="fragment font-medium"><span class="colorful">No Waiting:</span> Continue working while other people<br/>are working on the same Project at the same time.</p>
+						<p class="fragment font-medium">It supports a powerful feature called: <span class="colorful">Feature Branches.</span></p>
 					</section>
 
 					<!-- Collaboration -->
@@ -411,6 +411,12 @@
 
 				<!-- How Git Works -->
 				<section>
+
+					<section>
+						<h3 class="gitcolor">How does Git work?</h3>
+						<p class="Dfragment font-medium">Git is a very popular VCS.</p>
+					</section>
+
 				</section>
 
 				<!-- Git Hands-on -->
