Adding real life example of Git Workflow

--- a/index.html
+++ b/index.html
@@ -405,8 +405,14 @@
 							<small>The Distributed nature of Git enables us to keep track of<br/>each user's changes and contributions over time.</small>
 						</p>
 						<img style="width:80%;" src="img/CollabHistoryTracking.jpg" alt="">
-						
 					</section>
+
+					<!-- Real Life Example -->
+					<section>
+						<p class="font-medium">A Real Life Example of a Git Workflow in Production</p>
+						<img style="width:80%;" src="img/PlethoraCommits.jpg" alt="">
+					</section>
+
 				</section>
 
 				<!-- How Git Works -->
@@ -414,6 +420,11 @@
 
 					<section>
 						<h3 class="gitcolor">How does Git work?</h3>
+						<p class="fragment font-medium">Let's meet the 3 stages of Git</p>
+					</section>
+
+					<section>
+						<h3 class="gitcolor">The Three Stages of Git</h3>
 						<p class="Dfragment font-medium">Git is a very popular VCS.</p>
 					</section>
 
