3 Stages of Git and Git init

--- a/index.html
+++ b/index.html
@@ -429,7 +429,16 @@
 
 					<section>
 						<h3 class="gitcolor">How does Git work?</h3>
-						<p class="fragment font-medium">Let's meet the 3 stages of Git</p>
+					</section>
+
+					<section>
+						<p class="colorful"><strong class="colorful">Step 1</strong></p>
+						<p class="font-medium">In order for Git to start tracking our Project's files<br/>we first have to initialize our Project's folder</p>
+						<p class="fragment font-medium">Go to your Project Directory:</p>
+						<p class="fragment font-medium"><span class="colorful">&gt; cd myProject</span></p>
+						<p class="fragment font-medium">Initialize with Git:</p>
+						<p class="fragment font-medium"><span class="colorful">&gt; git init</span></p>
+						<p class="fragment font-medium">That's it! Git can now start tracking all changes.</p>
 					</section>
 
 					<section>
@@ -459,16 +468,16 @@
 							<div class="column git-index stage-box">
 								<img style="width:50%;margin:0 auto;" class="img-clean" src="img/css-file.svg" alt="">
 							</div>
-							<div class="column">
+							<div class="column fragment">
 								<small>-- git <span class="git-add">add</span> --&gt;</small>
 							</div>
-							<div class="column git-add stage-box">
+							<div class="column fragment git-add stage-box">
 								<img style="width:50%;margin:0 auto;" class="img-clean" src="img/css-file.svg" alt="">
 							</div>
-							<div class="column">
-								<small>-- <span class="git-commit">commit</span> --&gt;</small>
+							<div class="column fragment ">
+								<small>-- git <span class="git-commit">commit</span> --&gt;</small>
 							</div>
-							<div class="column git-commit stage-box">
+							<div class="column fragment git-commit stage-box">
 								<img style="width:50%;margin:0 auto;" class="img-clean" src="img/css-file.svg" alt="">
 							</div>
 						</div>
