--- a/index.html
+++ b/index.html
@@ -134,7 +134,10 @@
 					<h3 class="gitcolor">A Gentle Introduction to Version Control, Git &amp; GitHub</h3>
 					<p>
 						<small><a style="color:#0388a6;" href="https://github.com/kpouianou">Kosmas Pouianou, Kostas Minaidis</a></small>
-						<br/><small class="font-half">Instructors at Social Hackers Academy</small>
+						<br/><small class="font-half">(Instructors at Social Hackers Academy)</small>
+					</p>
+					<p>
+						<small style="opacity: 0.5; font-size:0.3em;">Version 0.1.0 | 26/04/2018</small>
 					</p>
 				</section>
 
@@ -441,6 +444,7 @@
 						<p class="fragment font-medium">That's it! Git can now start tracking all changes.</p>
 					</section>
 
+					<!-- Three Stages of Git -->
 					<section>
 						<h3 class="gitcolor">The Three Stages of Git</h3>
 
@@ -481,12 +485,57 @@
 								<img style="width:50%;margin:0 auto;" class="img-clean" src="img/css-file.svg" alt="">
 							</div>
 						</div>
-
 					</section>
 
+					<!-- Three Stages of Git :: Working Directory -->
+					<section>
+						<small>Files in a repository go through three stages<br/>before being under version control with git:</small>
+						<hr>
+
+
+						<div class="columns">
+							<div class="column is-one-quarter">
+								<p>
+									<small><span class="git-index">Working Directory</span></small>
+								</p>
+								<p>
+									<small><span class="git-add">Staging Area</span></small>
+								</p>
+								<p>
+									<small><span class="git-commit">Git Repository</span></small>
+								</p>
+							</div>
+							<div class="column">
+								<p>
+									<small class="font-half">Untracked Files: Files exist but they are not part of Git's version control.</small>
+								</p>
+								<p>
+									<small class="font-half">Tracked Files: Files have been added to Git's version control using the <span class="colorful">git add</span> command but changes have not been commited (stored) yet.</small>
+								</p>
+								<p>
+									<small class="font-half">Commited Files: Changes have been commited using the <span class="colorful">git commit</span> command and are now stored in your Git Repository (Database of changes)</small>
+								</p>
+							</div>
+						</div>
+						<hr>
+						<small>	<span class="colorful">git status</span> is used to understand what stage the files in a repository are at.</small>
+
+
+					</section>
+				</section>
+
+				<section data-transition="slide" data-background="#F7BE2C" data-background-transition="zoom">
+					<h3>Enough Theory:<br/>Let's Practice!</h3>
 				</section>
 
 				<!-- Git Hands-on -->
+				<section>
+					<section>
+						<h3><span class="gitcolor">Git</span> Hands-On</h3>
+					</section>
+				</section>
+
+				<!-- Terminology -->
 				<section>
 				</section>
 
