--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 
 					<section>
 						<h3 class="gitcolor">What is Git?</h3>
-						<p class="fragment font-medium">Git is a very <span class="colorful">popular</span> VCS.</p>
+						<p class="fragment font-medium">Git is a widely used and very <span class="colorful">popular</span> VCS.</p>
 						<p class="fragment font-medium">It is a tool that we install on our computers and tracks<br/>file changes and keeps a history of them <span class="colorful">(Commits)</span></p>
 						<p class="fragment font-medium">It allows <span class="colorful">multiple users</span> to work<br/>on a Project at the same time.</p>
 						<p class="fragment font-medium"><span class="colorful">No Waiting:</span> Continue working while other people<br/>are working on the same Project at the same time.</p>
@@ -533,8 +533,18 @@
 
 				</section>
 
-				<section data-transition="slide" data-background="#F7BE2C" data-background-transition="zoom">
-					<h3>Enough Theory:<br/>Let's Practice!</h3>
+				<section data-transition="slide" data-background="#000" data-background-transition="zoom">
+					<h3>Enough Theory: Let's Practice!</h3>
+					<h4 class="fragment">Prerequisites:</h4>
+					<p class="fragment font-medium">
+						1) Install Git<span class="colorful">*</span> and test that everything is working by running:<br/><span class="colorful">git --version</span>
+						<br/>
+						<a class="font-half" href="https://git-scm.com/download/win">Download for Windows</a><br/>
+						<a class="font-half" href="https://git-scm.com/download/linux">Download for Linux</a><br/>
+						<a class="font-half" href="https://git-scm.com/download/mac">Download for Mac</a><br/>
+					</p>
+					<p class="fragment">2) Create a GitHub Account</p>
+					<p class="fragment"><small><span class="colorful">*Windows: Check Git Bash</span></small></p>
 				</section>
 
 				<!-- Git Hands-on -->
@@ -563,8 +573,19 @@
 
 				<!-- RESOURCES -->
 				<section>
-					<p>
-						<a href="https://www.youtube.com/watch?v=ihKRRWBVn5k">Git Tutorial for Beginners 4 Git Concepts and Architecture</a>
+					<p>References and Sources:</p>
+					<p class="font-half">
+						<a href="https://www.youtube.com/watch?v=ihKRRWBVn5k">&bull; Git Tutorial for Beginners: 4 Git Concepts and Architecture</a>
+						<br/>
+						<a href="https://maryrosecook.com/blog/post/git-from-the-inside-out">&bull; Mary Rose Cook: Git from the inside out</a>
+						<br/>
+						<a href="https://githowto.com/">&bull; GitHowTo: A guided tour through the fundamentals of Git.</a>
+						<br/>
+						<a href="https://marklodato.github.io/visual-git-guide/index-en.html">&bull; A Visual Git Reference</a>
+						<br/>
+						<a href="https://learngitbranching.js.org">&bull; Learn Git Branching</a>
+						<br/>
+						<a href="https://agripongit.vincenttunru.com/">&bull; A Grip On Git: A Simple, Visual Git Tutorial</a>
 					</p>
 				</section>
 
