--- a/index.html
+++ b/index.html
@@ -530,28 +530,62 @@
 					<!--
 					<section></section>
 					-->
-
 				</section>
 
+				<!-- TODO: GitHub -->
+				<section>
+					<section>
+						<h3 class="gitcolor">GitHub</h3>
+						<img src="img/RemoveGithubRepo.png" alt="">
+						<small><strong class="colorful">Master</strong> (Local Repo) --&gt; <strong class="colorful">Origin</strong> (Remote Repo)</small>
+					</section>
+
+					<section>
+						<div class="columns">
+							<div class="column">
+								<img src="img/GitRepos.png" alt="">
+							</div>
+							<div class="column">
+								<img src="img/GitReposComic.png" alt="">
+							</div>
+						</div>
+					</section>
+				</section>
+
+				<!-- Setting Up Git and GitHub -->
 				<section data-transition="slide" data-background="#000" data-background-transition="zoom">
-					<h3>Enough Theory: Let's Practice!</h3>
-					<h4 class="fragment">Prerequisites:</h4>
-					<p class="fragment font-medium">
-						1) Install Git<span class="colorful">*</span> and test that everything is working by running:<br/><span class="colorful">git --version</span>
-						<br/>
-						<a class="font-half" href="https://git-scm.com/download/win">Download for Windows</a><br/>
-						<a class="font-half" href="https://git-scm.com/download/linux">Download for Linux</a><br/>
-						<a class="font-half" href="https://git-scm.com/download/mac">Download for Mac</a><br/>
-					</p>
-					<p class="fragment">2) Create a GitHub Account</p>
-					<p class="fragment"><small><span class="colorful">*Windows: Check Git Bash</span></small></p>
+
+					<section>
+						<h3>Enough Theory: Let's Practice!</h3>
+					</section>
+
+					<section>
+						<h4>Prerequisites:</h4>
+						<p class="fragment font-medium">
+							1) Install Git<span class="colorful">*</span> and test that everything is working by running:<br/><span class="colorful">git --version</span>
+							<br/>
+							<a class="font-half" href="https://git-scm.com/download/win">Download for Windows</a><br/>
+							<a class="font-half" href="https://git-scm.com/download/linux">Download for Linux</a><br/>
+							<a class="font-half" href="https://git-scm.com/download/mac">Download for Mac</a><br/>
+						</p>
+						<p class="fragment">2) Create a GitHub Account</p>
+						<p class="fragment"><small><span class="colorful">*Windows: Check Git Bash</span></small></p>
+					</section>
+
+					<section>
+						<p>3) Configure Git</p>
+						<p><span class="colorful">git config --global user.name "Joe"</span></p>
+						<p><span class="colorful">git config --global user.email "your@email.com"</span></p>	
+					</section>
 				</section>
 
 				<!-- Git Hands-on -->
 				<section>
+
 					<section>
 						<h3><span class="gitcolor">Git</span> Hands-On</h3>
 					</section>
+
 				</section>
 
 				<!-- Terminology -->
@@ -568,6 +602,7 @@
 
 				<!-- Git Commands -->
 				<section>
+
 					<h4>Git Commands Cheatsheet</h4>
 				</section>
 
@@ -575,6 +610,8 @@
 				<section>
 					<p>References and Sources:</p>
 					<p class="font-half">
+						<a href="https://github.com/SocialHackersCodeSchool/working-with-git/blob/master/working_with_git.md">&bull; Working With Git</a>
+						<br/>
 						<a href="https://www.youtube.com/watch?v=ihKRRWBVn5k">&bull; Git Tutorial for Beginners: 4 Git Concepts and Architecture</a>
 						<br/>
 						<a href="https://maryrosecook.com/blog/post/git-from-the-inside-out">&bull; Mary Rose Cook: Git from the inside out</a>
