--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
 					-->
 				</section>
 
-				<!-- TODO: GitHub -->
+				<!-- WiP: GitHub -->
 				<section>
 					<section>
 						<h3 class="gitcolor">GitHub</h3>
@@ -550,6 +550,16 @@
 							</div>
 						</div>
 					</section>
+
+					<section>
+						<p>Local / Remote Repo Synchronization</p>
+						<!-- Git #3 - Remember the latest synced version and push your local changes -->
+						<div style="padding:56.25% 0 0 0;position:relative;">
+							<iframe src="https://player.vimeo.com/video/197615572?color=70e5d7&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen>
+							</iframe>
+						</div>
+					</section>
+
 				</section>
 
 				<!-- Setting Up Git and GitHub -->
@@ -586,6 +596,19 @@
 						<h3><span class="gitcolor">Git</span> Hands-On</h3>
 					</section>
 
+					<section>
+						<p>What we'll do...</p>
+						<!-- 3 Stages of Git: Modify, Add, Commit -->
+						<div style="padding:56.25% 0 0 0;position:relative;">
+							<iframe src="https://player.vimeo.com/video/195333943?color=70e5d7&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen>
+							</iframe>
+						</div>
+					</section>
+
+					<section>
+						<h3>[ Demo Session ]</h3>
+					</section>
+
 				</section>
 
 				<!-- Terminology -->
@@ -600,17 +623,21 @@
 					<p class="font-half"><span class="colorful">Working Directory:</span> Where our Project lives</p>
 				</section>
 
-				<!-- Git Commands -->
+				<!-- TODO: Git Commands -->
+				<!--
 				<section>
 
 					<h4>Git Commands Cheatsheet</h4>
 				</section>
+				-->
 
 				<!-- RESOURCES -->
 				<section>
 					<p>References and Sources:</p>
 					<p class="font-half">
 						<a href="https://github.com/SocialHackersCodeSchool/working-with-git/blob/master/working_with_git.md">&bull; Working With Git</a>
+						<br/>
+						<a href="http://archaeogeek.github.io/foss4gukdontbeafraid/git/stages.html">&bull; The three stages of Git</a>
 						<br/>
 						<a href="https://www.youtube.com/watch?v=ihKRRWBVn5k">&bull; Git Tutorial for Beginners: 4 Git Concepts and Architecture</a>
 						<br/>
